# bookkeeper_thing

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_and_run
bookkeeper_thing/: CMakeLists.txt
bookkeeper_thing/include/bookkeeper_thing/: constants.hh  version.hh
bookkeeper_thing/include/bookkeeper_thing/structs/: stuff.hh  user.hh
bookkeeper_thing/include/bookkeeper_thing/widgets/: stuff_list.hh  users_list.hh
bookkeeper_thing/source/: main.cc
bookkeeper_thing/source/structs/: stuff.cc  user.cc
bookkeeper_thing/source/widgets/: stuff_list.cc  users_list.cc
